# UInstaller

./: CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  FileDownloader.cpp  FileDownloader.h  FileExtractor.cpp  FileExtractor.h  InstallData.cpp  InstallData.h  MapDecompressDialog.cpp  MapDecompressDialog.h  README.md  UInstaller.cpp  UInstaller.h  UInstaller.rc  main.cpp  resource.h
Licenses/: LICENSE-LIBARCHIVE  LICENSE-QT  LICENSE-UINSTALLER  LICENSE-UZ  LICENSE-ZLIB
